--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,13 @@ vignettes/*.pdf
 *.utf8.md
 *.knit.md
 
-# Other
-.DS_Store
+# Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
+rsconnect/
 .Rproj.user
+
+# Files in src created by R markdown
 src/*.html
+src/*.pdf
+
+# Mac OS X
+.DS_Store
